Criação da class Aluno, CRUD, forms gestão de alunos
Criado classe de aluno e seus atributos, criado o CRUD , mas não implementado ainda.
Criado forms de gestão de alunos, mas falta implementar os botões.

--- a/README
+++ b/README
@@ -31,6 +31,7 @@ Criado banco de dados;
 Adicionado dados ao banco;
 Criado form de login, professores, turmas, usuários, horários, novo usuário, menu principal;
 Criado GRUD BancoUser.
+Criado GRUD BancoProfessor
 
 
 Isenção de responsabilidade:
